welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:18: error: not found: value baisse
setCouleurBrosse(Color.YELLOW);avance();baisse(brosse);leveBrosse()
                                        ^